contrast fix

--- a/Chamber/css/small.css
+++ b/Chamber/css/small.css
@@ -160,7 +160,15 @@ main section:nth-child(2) {
   position: relative;
 }
 #heroP {
-  color: #fff;
+  background-image: linear-gradient(
+    90deg,
+    #feffb9,
+    #fcff5c,
+    #fbff00,
+    #fcff5c,
+    #feffb9
+  );
+  color: #0a0a0a;
   font-size: 1.3em;;
   position: absolute;
   padding: 0.5em;
@@ -169,9 +177,10 @@ main section:nth-child(2) {
   background-color: #65e77f;
   color: rgba(0, 0, 0, 0.9);
   border-radius: 10px; 
+  border: 3.5px solid #1ea539;
   position: absolute;
   padding: 0.5em;
-  margin: 3.5em 2% 0;
+  margin: 4em 1% 0;
 }
 section img {
   width: 100%;
